syntax = "proto3";
package pricefeed;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";



option go_package = "fairyring/x/pricefeed/types";

// Query defines the gRPC querier service.
service Query {


  rpc CurrentNonce(QueryCurrentNonceRequest) returns (QueryCurrentNonceResponse) {
    option (google.api.http).get = "/pricefeed/current_nonce/{denom}/{price}";
  }

}



message QueryCurrentNonceRequest { string denom = 1; 
string price = 2;
 }



message QueryCurrentNonceResponse {
  // price holds the current price for the given symbol.
  // The current price data for the given symbol.
  string nonce = 1;
}

